# shi-intelligence

./: .env.example  .gitignore  .pytest-report.json  INITIAL_PROMPT.md  LICENSE  PRD.md  README.md  SPARK_PROMPT.md  SPRINT3_COMPLETE.md  SPRINT5_MISSION.md  SPRINT5_SUMMARY.md  alembic.ini  improvements_prd.md  pyproject.toml  tp_production.md
.forgeloop/: assumptions.json  decisions.json  phases.json  project.json
.forgeloop/reports/: REP-76191.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_temporal_foundation.py  003_graph_intelligence.py  004_monitoring_tables.py  005_cross_token_intelligence.py
docs/: ARCHITECTURE.md  AUDIT_ADVANCEMENT.md  AUDIT_CAPABILITIES.md  AUDIT_IMPROVEMENTS.md  AUDIT_MARKETING.md  AUDIT_METHODOLOGY.md  AUDIT_SUMMARY.md  AUDIT_UX.md  AUDIT_WEAKNESSES.md  DATA_SCIENCE.md  INDEX.md  WHALE_TRACKER_PLAN.md
docs/corpus/: CORPUS_EXPORT_SPEC.md  EVIDENCE_PACKAGE_SPEC.md  HUMAN_REVIEW_API.md  INTELLIGENCE_CORPUS_SCHEMA.md  LABEL_DOMAINS.md  LABEL_QUALITY_METRICS.md  SPRINT_10_COMPLETION_REPORT.md
docs/design/: PDR.md
docs/exit_classifier/: CEX_DEPOSIT_DETECTION.md  EXIT_EVENT_CLASSIFIER_SPEC.md  LP_ACTION_SEPARATION.md  PNL_RELIABILITY_SCORE.md  SELL_CONFIDENCE_SCORE.md  SPRINT_9_COMPLETION_REPORT.md  SPRINT_9_VALIDATION_REPORT.md  TRANSFER_CHAIN_DETECTION.md
docs/monitoring/: EXIT_CLASSIFIER_MONITORING.md  EXIT_CLASSIFIER_PRODUCTION_REPORT.md  EXIT_CLASSIFIER_VALIDATION_DATASET.md
docs/planning/: PLAN_CROSS_TOKEN_INTELLIGENCE.md  ideas.md
docs/pnl/: COST_BASIS_ESTIMATION.md  HISTORICAL_PRICE_SNAPSHOT_SPEC.md  PROFIT_EXTRACTION_FEATURES.md  REALISED_PNL_IMPLEMENTATION.md  (+2 more)
models/: .gitkeep
scripts/: collect_training_data.py  demo_graph_intelligence.py  demo_temporal_foundation.py  fix_type_annotations.py  live_test.py  run_benchmark.py  run_calibration_audit.py  run_coordination_validation.py  run_graph_validation.py  run_semantics_audit.py  run_validation_gate.py  test_helius.py  test_websocket_alerts.py  train_scientific_models.py  validate_env.py
src/: __init__.py  main.py
static/: index.html
sweenee/: .env.example  README.md  app.py  config.py  requirements.txt
tests/: __init__.py  conftest.py  test_api.py  test_bayesian.py  test_clustering_intelligence.py  test_cross_token_analyzer.py  test_explain_commands.py  test_explainability.py  test_graph_intelligence.py  test_metrics_reproducibility.py  test_monitoring.py  test_patterns.py  test_price_provider.py  test_repositories.py  test_reputation_scorer.py  test_sequence.py  test_shared_funder.py  test_sprint8_pnl.py  test_sprint9_exit_classifier.py  test_telegram_commands.py  test_temporal_foundation.py
(+227 files in other folders)
